--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,7 +159,7 @@ FILE(GLOB VCA_LOCAL_SRC
   VCA_BATH_FUNCTIONS.f90
   VCA_DIAG.f90
   VCA_OBSERVABLES.f90
-  VCA_QMATRIX.f90
+  VCA_GREENS_FUNCTIONS.f90
   VCA_MAIN.f90
   VCA.f90
   )
